# techdocs

./: .gitignore  .windsurfrules  Cargo.toml  README.md  openapi.yaml  tasks.json
prompts/: readme.txt
src/: claude.rs  lib.rs  main.rs
