[package]
name = "techdocs"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.8.0"
