[package]
name = "techdocs"
version = "0.1.0"
edition = "2021"

[lib]
name = "techdocs"
path = "src/lib.rs"

[[bin]]
name = "techdocs-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "techdocs-api"
path = "src/bin/api.rs"

[dependencies]
ignore = "0.4"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
git2 = "0.18"
url = "2.5"
temp-dir = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8.0"
