[package]
name = "techdocs"
version = "0.1.0"
edition = "2021"

[lib]
name = "techdocs"
path = "src/lib.rs"

[[bin]]
name = "techdocs-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "techdocs-api"
path = "src/bin/api.rs"

[dependencies]
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
claude-client = "0.3.1"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
git2 = "0.20.0"
url = "2.5"
temp-dir = "0.1"
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.11"

[dev-dependencies]
tempfile = "3.8.0"
